# fuznet

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  bug1.v  flake.nix  why_wrong.cpp
.github/workflows/: build.yml
bug_dir/: bug.v  cells.yaml  counter_example.vcd  eq_top.smt2  eq_top.v  eq_top.vcd  eq_top_tb.cpp  impl.dot  impl.tcl  impl.v  miter_check.ys  port_spec.json  settings.toml  struct_check.ys  synth.dot  synth.v  synth_prims.v
config/: base.toml  settings.toml  variations.json
docs/: d3-graphviz.js  d3-graphviz.js.map  generation.html  index.html  reduction.html
flows/fuzzing/: 10_gen.sh  20_impl.sh  30_struct.sh  40_miter.sh  50_verilator.sh  60_bmc.sh  61_induct.sh  70_reduction.sh  lib.sh
flows/vivado/: impl.tcl
flows/yosys/: miter.ys.in  miter_check.ys.in  struct.ys.in  struct_check.ys.in
hardware/boards/: xilinx.yaml
hardware/cells/: xilinx.yaml
hardware/xilinx/: cells.yaml
scripts/: build.sh  fuzz_loop.sh  fuzz_pool.sh  fuzzer.sh  gen_miter.py  gen_tb.py  get_wns_before_marker.py  install.sh  install_user_service.sh  rotate_toml.py  vivado_log_parse.py
src/: lib.cpp  lib.hpp  lib.yaml  main.cpp  module.hpp  module_library.cpp  module_library.hpp  module_spec.hpp  netlist.cpp  netlist.hpp  netlistfuzzer.cpp  netlistfuzzer.hpp  spec.hpp
src/actions/: CMakeLists.txt  commands.hpp
src/core/: CMakeLists.txt  library.cpp  library.hpp  module.hpp
src/netlist/: CMakeLists.txt  netlist.cpp  netlist.hpp
src/orchestrator/: CMakeLists.txt  orchestrator.cpp  orchestrator.hpp
src/reducer/: CMakeLists.txt  reducer.cpp  reducer.hpp
